--- a/roles/security/tasks/main.yml
+++ b/roles/security/tasks/main.yml
@@ -151,19 +151,9 @@
     region: "{{ aws_region }}"
     subnets: "{{ public_subnet_ids }}"
     ingress:
-      - rule_no: 100
-        protocol: -1
-        action: allow
-        cidr_block: '0.0.0.0/0'
-        from_port: -1
-        to_port: -1
+      - [100, -1, 'allow', '0.0.0.0/0', -1, -1]
     egress:
-      - rule_no: 100
-        protocol: -1
-        action: allow
-        cidr_block: '0.0.0.0/0'
-        from_port: -1
-        to_port: -1
+      - [100, -1, 'allow', '0.0.0.0/0', -1, -1]
     tags: "{{ common_tags | combine({'Name': public_nacl_name, 'Type': 'NetworkACL'}) }}"
   register: public_nacl
 
