--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -9,10 +9,8 @@ owner: "aws-management-team"
 # AWS Region
 aws_region: "us-east-1"
 
-# Availability zones (will use first 2 AZs in the region)
-availability_zones:
-  - "{{ aws_region }}a"
-  - "{{ aws_region }}b"
+# Availability zone
+availability_zone: "{{ aws_region }}a"
 
 # VPC Configuration
 vpc_cidr: "10.0.0.0/16"
@@ -21,32 +19,17 @@ vpc_name: "{{ project_name }}-{{ env_name }}-vpc"
 # Subnet Configuration
 public_subnets:
   - cidr: "10.0.1.0/24"
-    az: "{{ availability_zones[0] }}"
-    name: "{{ vpc_name }}-public-subnet-1"
-  - cidr: "10.0.2.0/24"
-    az: "{{ availability_zones[1] }}"
-    name: "{{ vpc_name }}-public-subnet-2"
+    az: "{{ availability_zone }}"
+    name: "{{ vpc_name }}-public-subnet"
 
 private_subnets:
   - cidr: "10.0.10.0/24"
-    az: "{{ availability_zones[0] }}"
-    name: "{{ vpc_name }}-private-subnet-1"
-  - cidr: "10.0.20.0/24"
-    az: "{{ availability_zones[1] }}"
-    name: "{{ vpc_name }}-private-subnet-2"
-
-# Database subnets (for RDS)
-database_subnets:
-  - cidr: "10.0.50.0/24"
-    az: "{{ availability_zones[0] }}"
-    name: "{{ vpc_name }}-db-subnet-1"
-  - cidr: "10.0.60.0/24"
-    az: "{{ availability_zones[1] }}"
-    name: "{{ vpc_name }}-db-subnet-2"
+    az: "{{ availability_zone }}"
+    name: "{{ vpc_name }}-private-subnet"
 
 # Bastion Host Configuration
 bastion_ami_id: "ami-0c02fb55956c7d316"  # Amazon Linux 2 AMI (update as needed)
-bastion_instance_type: "t3.micro"
+bastion_instance_type: "t2.micro"  # Using t2.micro for testing
 bastion_key_pair: "{{ project_name }}-{{ env_name }}-keypair"
 
 # Enable/Disable Components
