feat: Add database subnet tier
- Add database subnet configuration in all.yml
- Implement database subnet creation in VPC tasks
- Set database subnet IDs for security configuration
- Update VPC summary to include database subnet info
- Configure isolated subnet for database instances (CIDR: 10.0.20.0/24)

--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -27,6 +27,11 @@ private_subnets:
     az: "{{ availability_zone }}"
     name: "{{ vpc_name }}-private-subnet"
 
+database_subnets:
+  - cidr: "10.0.20.0/24"
+    az: "{{ availability_zone }}"
+    name: "{{ vpc_name }}-database-subnet"
+
 # Bastion Host Configuration
 bastion_ami_id: "ami-0c02fb55956c7d316"  # Amazon Linux 2 AMI (update as needed)
 bastion_instance_type: "t2.micro"  # Using t2.micro for testing
