fix: Correct launch template ID reference in bastion deployment
- Fix bastion_lt.template_id to bastion_lt.launch_template.launch_template_id
- Use correct attribute path for ec2_launch_template module return value
- Resolve 'dict has no attribute template_id' error

--- a/roles/bastion/tasks/main.yml
+++ b/roles/bastion/tasks/main.yml
@@ -39,7 +39,7 @@
     name: "{{ vpc_name }}-bastion-host"
     region: "{{ aws_region }}"
     launch_template:
-      id: "{{ bastion_lt.template_id }}"
+      id: "{{ bastion_lt.launch_template.launch_template_id }}"
     vpc_subnet_id: "{{ public_subnet_ids[0] }}"
     assign_public_ip: true
     state: present
